# TransformerDynamics

./: .gitignore  README.md  pyproject.toml
exps/: circle.ipynb  circle.py  exp33.py  four_part_system.py  max_on_circle_split_vis.py  max_on_sphere.py  max_on_sphere_id.py  max_on_sphere_nd.py  max_on_sphere_split.py  max_test.py  min_comb.py  min_density.py  min_density_opt_f.py  min_on_sphere.py  min_on_sphere_negative_ev.py  pdffitting.py  sphere.ipynb  sphere2.py  sphere3.py  sym_int_eval.py  symbolic.py  symbolic2.py  test_integral.py
exps/.ipynb_checkpoints/: sphere-checkpoint.ipynb
exps/deprc/: check_integral_id.py  circle.ipynb  circle2.py  power_it.py  sphere.py  sym.py  test_dirac.py  test_ellipse.py  test_min.py  vis_min.py  vis_min_2.py  vis_scaling.py
exps/results/: maxid.csv  maxid.txt  power_power_it.txt  tanh_min.txt  tanh_min0.0005.csv  tanh_min0.0005.txt  tanh_min0.05.csv  transformer_power_it.txt
exps/results/densities/: MinDensity_d2_0.txt  MinDensity_d2_1.txt  MinDensity_d2_2.txt  MinDensity_d2_3.txt  MinDensity_d2_4.txt  MinDensity_d2_5.txt  MinDensity_d2_6.txt  MinDensity_d2_7.txt  MinDensity_d2_8.txt  diffs.csv  ds.txt
exps/results/split_eval/: CC.txt  E.txt  Es.txt  Pmin.txt  TEs.txt
tfdy/: __init__.py  coordinates.py  elliptics.py  optim_diracs.py  plotting.py  sphere_densities.py  utils.py
tfdy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
