[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="tfdy"
version="0.1.0"
authors = [
    {name = "Samira Kabri, Tim Roith", email = "tim.roith@desy.de"},
]
description="Transformer Dynmaics"
dependencies = [  
    'numpy===1.26.4', 
    'scipy',
    'matplotlib',
    'torch==2.2.1'
    ]
requires-python = ">3.5.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[project.optional-dependencies] # Optional dependencies


[tool.setuptools]
packages = ['tfdy',]


[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
